# rclaude

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: release.yml
crates/rclaude-api/: Cargo.toml
crates/rclaude-api/src/: client.rs  lib.rs  retry.rs  streaming.rs  types.rs
crates/rclaude-api/src/providers/: anthropic.rs  bedrock.rs  mod.rs  vertex.rs
crates/rclaude-commands/: Cargo.toml
crates/rclaude-commands/src/: add_dir.rs  advisor.rs  agents.rs  autofix_pr.rs  branch.rs  btw.rs  bughunter.rs  clear.rs  color.rs  commit.rs  commit_push_pr.rs  compact.rs  config.rs  context.rs  copy.rs  cost.rs  ctx_viz.rs  debug_tool_call.rs  desktop.rs  diff.rs  doctor.rs  effort.rs  env.rs  exit.rs  export.rs  fast.rs  feedback.rs  files.rs  good_claude.rs  help.rs  hooks.rs  ide.rs  init.rs  insights.rs  install_github_app.rs  install_slack_app.rs  issue.rs  keybindings.rs  lib.rs  login.rs  (+34 more)
crates/rclaude-core/: Cargo.toml
crates/rclaude-core/src/: attachments.rs  auth.rs  auto_compact.rs  auto_mode.rs  collapse.rs  command.rs  commit_attribution.rs  config.rs  context_analysis.rs  context_window.rs  denial_tracking.rs  error.rs  fast_mode.rs  filesystem.rs  hooks.rs  hooks_config.rs  keybindings.rs  lib.rs  message.rs  messages.rs  micro_compact.rs  model.rs  output_styles.rs  permission_prompt.rs  permission_rules.rs  permissions.rs  plugins.rs  query.rs  sandbox.rs  settings.rs  shutdown.rs  state.rs  stats.rs  streaming_executor.rs  swarm.rs  system_prompt.rs  task.rs  theme.rs  tool.rs  tool_input_validation.rs  (+2 more)
crates/rclaude-mcp/: Cargo.toml
crates/rclaude-mcp/src/: approval.rs  client.rs  config.rs  lib.rs  manager.rs  oauth.rs  sse.rs  types.rs  websocket.rs
crates/rclaude-services/: Cargo.toml
crates/rclaude-services/src/: agent_summary.rs  analytics.rs  auto_dream.rs  cleanup.rs  compact.rs  conversation_recovery.rs  cost_tracker.rs  cron.rs  diagnostics.rs  extract_memories.rs  file_history.rs  forked_agent.rs  history.rs  input_processor.rs  lib.rs  lsp.rs  magic_docs.rs  markdown_loader.rs  notifier.rs  oauth.rs  policy_limits.rs  prompt_suggestions.rs  remote_settings.rs  secure_storage.rs  session.rs  session_memory.rs  session_storage.rs  settings_sync.rs  setup.rs  task_manager.rs  team_memory.rs  tips.rs  token_estimation.rs  tool_execution.rs  worktree.rs
crates/rclaude-tools/: Cargo.toml
crates/rclaude-tools/src/: agent.rs  agent_fork.rs  agent_loader.rs  agent_types.rs  ask_user.rs  bash.rs  bash_ast.rs  bash_classifier.rs  bash_path.rs  bash_sed.rs  brief.rs  config_tool.rs  cron.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  list_mcp_resources.rs  lsp.rs  mcp_auth.rs  mcp_tool.rs  monitor.rs  notebook.rs  plan_mode.rs  powershell.rs  push_notification.rs  read_mcp_resource.rs  remote_trigger.rs  send_user_file.rs  skill.rs  sleep.rs  subscribe_pr.rs  suggest_background_pr.rs  synthetic_output.rs  task_tools.rs  team.rs  testing_permission.rs  todo.rs  (+6 more)
crates/rclaude-tui/: Cargo.toml
crates/rclaude-tui/src/: app.rs  input.rs  lib.rs  markdown.rs  runner.rs  ui.rs
crates/rclaude-utils/: Cargo.toml
crates/rclaude-utils/src/: deep_link.rs  file.rs  format.rs  fs_ops.rs  git.rs  git_ops.rs  ide.rs  input_processing.rs  lib.rs  path.rs  ripgrep.rs  shell.rs  shell_provider.rs  suggestions.rs
docs/: TODO.md
src/: main.rs  query_engine.rs
tests/: integration_test.rs
