[workspace]
resolver = "2"
members = [
    "crates/rclaude-core",
    "crates/rclaude-api",
    "crates/rclaude-tools",
    "crates/rclaude-mcp",
    "crates/rclaude-commands",
    "crates/rclaude-services",
    "crates/rclaude-utils",
    "crates/rclaude-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }
reqwest-eventsource = "0.6"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File operations
globset = "0.4"
ignore = "0.4"
notify = "7"
similar = "2"
walkdir = "2"

# Crypto
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
lru = "0.12"
colored = "2"
once_cell = "1"
regex = "1"
url = "2"
base64 = "0.22"
rand = "0.8"
shell-words = "1"

# Workspace crates
rclaude-core = { path = "crates/rclaude-core" }
rclaude-api = { path = "crates/rclaude-api" }
rclaude-tools = { path = "crates/rclaude-tools" }
rclaude-mcp = { path = "crates/rclaude-mcp" }
rclaude-commands = { path = "crates/rclaude-commands" }
rclaude-services = { path = "crates/rclaude-services" }
rclaude-utils = { path = "crates/rclaude-utils" }
rclaude-tui = { path = "crates/rclaude-tui" }

[package]
name = "rclaude"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for Anthropic Claude API"

[[bin]]
name = "rclaude"
path = "src/main.rs"

[dependencies]
rclaude-core.workspace = true
rclaude-api.workspace = true
rclaude-tools.workspace = true
rclaude-commands.workspace = true
rclaude-utils.workspace = true
futures.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
rclaude-tui.workspace = true
rclaude-services.workspace = true
rclaude-mcp.workspace = true
crossterm = "0.28"
atty = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3"
