[package]
name = "rclaude-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and error handling for rclaude"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true
rand.workspace = true
regex.workspace = true
base64.workspace = true
futures.workspace = true
reqwest.workspace = true
atty = "0.2"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
