[package]
name = "rclaude-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP client and server implementation"

[dependencies]
rclaude-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
dirs.workspace = true
reqwest.workspace = true
sha2.workspace = true
base64.workspace = true
atty = "0.2"
getrandom = "0.2"
urlencoding = "2"
open = "5"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
