[package]
name = "rclaude-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool implementations for rclaude"

[dependencies]
rclaude-core.workspace = true
rclaude-api.workspace = true
rclaude-utils.workspace = true
rclaude-mcp.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
globset.workspace = true
ignore.workspace = true
similar.workspace = true
walkdir.workspace = true
regex.workspace = true
shell-words.workspace = true
reqwest.workspace = true
dirs.workspace = true
chrono.workspace = true
uuid.workspace = true
lazy_static = "1"
atty = "0.2"
tree-sitter = "0.24"
tree-sitter-bash = "0.23"

[dev-dependencies]
tempfile = "3"
