[package]
name = "rclaude-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Utility functions: git, file, path, shell operations"

[dependencies]
rclaude-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
dirs.workspace = true
once_cell.workspace = true
regex.workspace = true
shell-words.workspace = true
walkdir.workspace = true
urlencoding = "2"
